--- a/src/main/webapp/include/mainmenu.xhtml
+++ b/src/main/webapp/include/mainmenu.xhtml
@@ -26,6 +26,8 @@
     </pretty:link>
     <f:verbatim>|</f:verbatim>
     <pretty:link mappingId="projectmain" styleClass="menuitem2" onclick="if (!checkForChangedData()) {return false;}">
+        <f:param value="unknown"/>
+        <f:param value="new"/>
         <f:param value="new"/>
         <h:outputText value="Projekte"/>
     </pretty:link>
