--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancerhistory.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/freelancer/freelancerhistory.xhtml
@@ -4,7 +4,9 @@
                 xmlns:b="http://mogwai.sourceforge.net/layout"
                 xmlns:a4j="http://richfaces.org/a4j"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:rich="http://richfaces.org/rich" template="/template/powerstaff.xhtml">
+                xmlns:rich="http://richfaces.org/rich"
+                xmlns:pretty="http://ocpsoft.com/prettyfaces"
+                template="/template/powerstaff.xhtml">
     <ui:define name="pagetitle">
         <h:outputText
                 value="Historie #{freelancerBackingBean.data.entity.name1} #{freelancerBackingBean.data.entity.name2}"/>
@@ -112,7 +114,24 @@
                 <f:facet name="header">
                     <h:outputText value="Projekt"/>
                 </f:facet>
-                <h:outputText value="#{row.project.projectNumber} #{row.project.descriptionShort}"/>
+                <f:subview id="customerlink" rendered="#{!empty row.project.customer}">
+                    <pretty:link mappingId="projectmain">
+                        <f:param value="customer"/>
+                        <f:param value="#{row.project.customer.id}"/>
+                        <f:param value="#{row.project.id}"/>
+                        <img src="${facesContext.externalContext.requestContextPath}/images/select.gif"/>
+                        <h:outputText value="#{row.project.projectNumber} #{row.project.descriptionShort}"/>
+                    </pretty:link>
+                </f:subview>
+                <f:subview id="partnerlink" rendered="#{!empty row.project.partner}">
+                    <pretty:link mappingId="projectmain">
+                        <f:param value="partner"/>
+                        <f:param value="#{row.project.partner.id}"/>
+                        <f:param value="#{row.project.id}"/>
+                        <img src="${facesContext.externalContext.requestContextPath}/images/select.gif"/>
+                        <h:outputText value="#{row.project.projectNumber} #{row.project.descriptionShort}"/>
+                    </pretty:link>
+                </f:subview>
             </h:column>
             <h:column>
                 <f:facet name="header">
