--- a/src/main/webapp/include/customer/customermain.xhtml
+++ b/src/main/webapp/include/customer/customermain.xhtml
@@ -87,7 +87,8 @@
                 </h:commandLink>
             </b:cell>
             <b:cell x="13" y="1">
-                <pretty:link mappingId="projectmain" onclick="if (!checkForChangedData()) {return false;}">
+                <pretty:link title="Neues Projekt erfassen" mappingId="projectmain"
+                             onclick="if (!checkForChangedData()) {return false;}">
                     <f:param value="customer"/>
                     <f:param value="#{customerBackingBean.data.currentEntityId}"/>
                     <f:param value="new"/>
