--- a/src/main/webapp/include/freelancer/freelancermenu2.xhtml
+++ b/src/main/webapp/include/freelancer/freelancermenu2.xhtml
@@ -17,5 +17,13 @@
             <h:outputText value="Kontakthistorie" styleClass="menuitemSelected"/>
         </b:cell>
 
+        <b:cell x="1" y="5">
+            <pretty:link mappingId="freelancersimilar" styleClass="menuitem"
+                         onclick="if (!checkForChangedData()) {return false;}">
+                <f:param value="#{freelancerBackingBean.data.currentEntityId}"/>
+                <h:outputText value="&#196;hnliche Profile"/>
+            </pretty:link>
+        </b:cell>
+
     </b:gridBagLayout>
 </f:subview>
