--- a/src/main/webapp/include/freelancer/freelancermenu3.xhtml
+++ b/src/main/webapp/include/freelancer/freelancermenu3.xhtml
@@ -6,7 +6,11 @@
            xmlns:pretty="http://ocpsoft.com/prettyfaces">
     <b:gridBagLayout rows="p,2,p,2,p" cols="100">
         <b:cell x="1" y="1">
-            <h:outputText value="Stammdaten" styleClass="menuitemSelected"/>
+            <pretty:link mappingId="freelancermain" styleClass="menuitem"
+                         onclick="if (!checkForChangedData()) {return false;}">
+                <f:param value="#{freelancerBackingBean.data.currentEntityId}"/>
+                <h:outputText value="Stammdaten"/>
+            </pretty:link>
         </b:cell>
 
         <b:cell x="1" y="3">
@@ -18,11 +22,7 @@
         </b:cell>
 
         <b:cell x="1" y="5">
-            <pretty:link mappingId="freelancersimilar" styleClass="menuitem"
-                         onclick="if (!checkForChangedData()) {return false;}">
-                <f:param value="#{freelancerBackingBean.data.currentEntityId}"/>
-                <h:outputText value="&#196;hnliche Profile"/>
-            </pretty:link>
+            <h:outputText value="&#196;hnliche Profile" styleClass="menuitemSelected"/>
         </b:cell>
 
     </b:gridBagLayout>
