--- a/src/main/webapp/include/project/projectmain.xhtml
+++ b/src/main/webapp/include/project/projectmain.xhtml
@@ -77,7 +77,8 @@
             </b:cell>
             <b:cell x="9" y="1">
                 <h:commandLink title="Löschen" action="#{projectBackingBean.commandDelete}"
-                               onclick="if (!confirm('Wollen Sie diesen Datensatz wirklick löschen?')) {return false;}">
+                               onclick="if (!confirm('Wollen Sie diesen Datensatz wirklick löschen?')) {return false;}"
+                               rendered="#{!empty projectBackingBean.data.entity.id}">
                     <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
                 </h:commandLink>
             </b:cell>
