--- a/src/main/webapp/include/customer/customermenu1.xhtml
+++ b/src/main/webapp/include/customer/customermenu1.xhtml
@@ -10,11 +10,13 @@
         </b:cell>
 
         <b:cell x="1" y="3">
-            <pretty:link mappingId="customerhistory" styleClass="menuitem"
-                         onclick="if (!checkForChangedData()) {return false;}">
-                <f:param value="#{customerBackingBean.data.currentEntityId}"/>
-                <h:outputText value="Kontakthistorie"/>
-            </pretty:link>
+            <f:subview id="historylink" rendered="#{!empty customerBackingBean.data.entity.id}">
+                <pretty:link mappingId="customerhistory" styleClass="menuitem"
+                             onclick="if (!checkForChangedData()) {return false;}">
+                    <f:param value="#{customerBackingBean.data.currentEntityId}"/>
+                    <h:outputText value="Kontakthistorie"/>
+                </pretty:link>
+            </f:subview>
         </b:cell>
 
     </b:gridBagLayout>
