--- a/src/main/webapp/include/partner/partnermenu2.xhtml
+++ b/src/main/webapp/include/partner/partnermenu2.xhtml
@@ -18,11 +18,13 @@
         </b:cell>
 
         <b:cell x="1" y="5">
-            <pretty:link mappingId="partnerfreelancer" styleClass="menuitem"
-                         onclick="if (!checkForChangedData()) {return false;}">
-                <f:param value="#{partnerBackingBean.data.currentEntityId}"/>
-                <h:outputText value="Freiberufler"/>
-            </pretty:link>
+            <f:subview id="freelancerlink" rendered="#{!empty partnerBackingBean.data.entity.id}">
+                <pretty:link mappingId="partnerfreelancer" styleClass="menuitem"
+                             onclick="if (!checkForChangedData()) {return false;}">
+                    <f:param value="#{partnerBackingBean.data.currentEntityId}"/>
+                    <h:outputText value="Freiberufler"/>
+                </pretty:link>
+            </f:subview>
         </b:cell>
     </b:gridBagLayout>
 </f:subview>
