--- a/src/main/webapp/include/partner/partnermenu3.xhtml
+++ b/src/main/webapp/include/partner/partnermenu3.xhtml
@@ -14,11 +14,13 @@
         </b:cell>
 
         <b:cell x="1" y="3">
-            <pretty:link mappingId="partnerhistory" styleClass="menuitem"
-                         onclick="if (!checkForChangedData()) {return false;}">
-                <f:param value="#{partnerBackingBean.data.currentEntityId}"/>
-                <h:outputText value="Kontakthistorie"/>
-            </pretty:link>
+            <f:subview id="historylink" rendered="#{!empty partnerBackingBean.data.entity.id}">
+                <pretty:link mappingId="partnerhistory" styleClass="menuitem"
+                             onclick="if (!checkForChangedData()) {return false;}">
+                    <f:param value="#{partnerBackingBean.data.currentEntityId}"/>
+                    <h:outputText value="Kontakthistorie"/>
+                </pretty:link>
+            </f:subview>
         </b:cell>
 
         <b:cell x="1" y="5">
