--- a/src/main/webapp/include/partner/partnersearchresult.xhtml
+++ b/src/main/webapp/include/partner/partnersearchresult.xhtml
@@ -18,87 +18,87 @@
         <ui:include src="/include/partner/partnermenu1.xhtml"/>
     </ui:define>
     <ui:define name="content">
-        <b:title title="Geschäftspartner - Suchergebnisse"/>
-        <f:subview id="partner_searchresult">
-            <b:gridBagLayout id="x" rows="p,10" cols="100,p">
-                <b:cell y="1" x="1">
-                    <h:outputText styleClass="title" value="Partner Suchergebnisse"/>
-                </b:cell>
 
-                <b:cell y="1" x="2">
-                    <a4j:status>
-                        <f:facet name="start">
-                            <img src="${facesContext.externalContext.requestContextPath}/images/rotate2.gif" width="20"
-                                 height="20"/>
-                        </f:facet>
-                    </a4j:status>
-                </b:cell>
-            </b:gridBagLayout>
+        <b:saveState value="#{partnerBackingBean}"/>
 
-            <b:gridBagLayout cols="810" rows="30,10,1,p">
-                <b:cell x="1" y="1">
-                    <b:titledBox label="Menu">
-                        <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
-                                         rows="20">
-                            <b:cell x="1" y="1">
-                                <pretty:link mappingId="partnermain" title="Zurück">
-                                    <f:param value="#{partnerBackingBean.data.currentEntityId}"/>
-                                    <img src="${facesContext.externalContext.requestContextPath}/images/back.gif"/>
-                                </pretty:link>
-                            </b:cell>
-                        </b:gridBagLayout>
-                    </b:titledBox>
-                </b:cell>
+        <b:gridBagLayout id="x" rows="p,10" cols="100,p">
+            <b:cell y="1" x="1">
+                <h:outputText styleClass="title" value="Partner Suchergebnisse"/>
+            </b:cell>
 
-                <b:cell x="1" y="3">
-                    <ui:include src="/include/messages.xhtml"/>
-                </b:cell>
+            <b:cell y="1" x="2">
+                <a4j:status>
+                    <f:facet name="start">
+                        <img src="${facesContext.externalContext.requestContextPath}/images/rotate2.gif" width="20"
+                             height="20"/>
+                    </f:facet>
+                </a4j:status>
+            </b:cell>
+        </b:gridBagLayout>
 
-                <b:cell x="1" y="4">
-                    <b:table var="row" value="#{partnerBackingBean.data.searchResult}" cols="20,150,150,130,100,260">
-                        <h:column>
-                            <f:facet name="header">
-                            </f:facet>
-                            <pretty:link mappingId="partnermain" title="Datensatz anzeigen">
-                                <f:param value="#{row.ID}"/>
-                                <img src="${facesContext.externalContext.requestContextPath}/images/select.gif"/>
+        <b:gridBagLayout cols="810" rows="30,10,1,p">
+            <b:cell x="1" y="1">
+                <b:titledBox label="Menu">
+                    <b:gridBagLayout cols="20,20,20,20,20,20,20,20,20,20,20,right:*"
+                                     rows="20">
+                        <b:cell x="1" y="1">
+                            <pretty:link mappingId="partnermain" title="Zurück">
+                                <f:param value="#{partnerBackingBean.data.currentEntityId}"/>
+                                <img src="${facesContext.externalContext.requestContextPath}/images/back.gif"/>
                             </pretty:link>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Name1"/>
-                            </f:facet>
-                            <h:outputText value="#{row.name1}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Name2"/>
-                            </f:facet>
-                            <h:outputText value="#{row.name2}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Firma"/>
-                            </f:facet>
-                            <h:outputText value="#{row.company}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Stadt"/>
-                            </f:facet>
-                            <h:outputText value="#{row.city}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Kommentar"/>
-                            </f:facet>
-                            <h:outputText value="#{row.comments}"/>
-                        </h:column>
-                    </b:table>
-                </b:cell>
+                        </b:cell>
+                    </b:gridBagLayout>
+                </b:titledBox>
+            </b:cell>
 
-            </b:gridBagLayout>
+            <b:cell x="1" y="3">
+                <ui:include src="/include/messages.xhtml"/>
+            </b:cell>
 
-        </f:subview>
+            <b:cell x="1" y="4">
+                <b:table var="row" value="#{partnerBackingBean.data.searchResult}" cols="20,150,150,130,100,260">
+                    <h:column>
+                        <f:facet name="header">
+                        </f:facet>
+                        <pretty:link mappingId="partnermain" title="Datensatz anzeigen">
+                            <f:param value="#{row.ID}"/>
+                            <img src="${facesContext.externalContext.requestContextPath}/images/select.gif"/>
+                        </pretty:link>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Name1"/>
+                        </f:facet>
+                        <h:outputText value="#{row.name1}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Name2"/>
+                        </f:facet>
+                        <h:outputText value="#{row.name2}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Firma"/>
+                        </f:facet>
+                        <h:outputText value="#{row.company}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Stadt"/>
+                        </f:facet>
+                        <h:outputText value="#{row.city}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Kommentar"/>
+                        </f:facet>
+                        <h:outputText value="#{row.comments}"/>
+                    </h:column>
+                </b:table>
+            </b:cell>
+
+        </b:gridBagLayout>
+
     </ui:define>
 </ui:composition>	
