Bug fixing, added new project overview to customer and partner module

--- a/src/main/webapp/include/customer/customermenu1.xhtml
+++ b/src/main/webapp/include/customer/customermenu1.xhtml
@@ -19,5 +19,15 @@
             </f:subview>
         </b:cell>
 
+        <b:cell x="1" y="5">
+            <f:subview id="projectlink" rendered="#{!empty customerBackingBean.data.entity.id}">
+                <pretty:link mappingId="customerproject" styleClass="menuitem"
+                             onclick="if (!checkForChangedData()) {return false;}">
+                    <f:param value="#{customerBackingBean.data.currentEntityId}"/>
+                    <h:outputText value="Projekte"/>
+                </pretty:link>
+            </f:subview>
+        </b:cell>
+
     </b:gridBagLayout>
 </f:subview>
