--- a/src/main/webapp/include/partner/partnermenu4.xhtml
+++ b/src/main/webapp/include/partner/partnermenu4.xhtml
@@ -6,7 +6,11 @@
            xmlns:pretty="http://ocpsoft.com/prettyfaces">
     <b:gridBagLayout rows="p,2,p,2,p,2,p" cols="100">
         <b:cell x="1" y="1">
-            <h:outputText value="Stammdaten" styleClass="menuitemSelected"/>
+            <pretty:link mappingId="partnermain" styleClass="menuitem"
+                         onclick="if (!checkForChangedData()) {return false;}">
+                <f:param value="#{partnerBackingBean.data.currentEntityId}"/>
+                <h:outputText value="Stammdaten"/>
+            </pretty:link>
         </b:cell>
 
         <b:cell x="1" y="3">
@@ -30,13 +34,7 @@
         </b:cell>
 
         <b:cell x="1" y="7">
-            <f:subview id="projectslink" rendered="#{!empty partnerBackingBean.data.entity.id}">
-                <pretty:link mappingId="partnerproject" styleClass="menuitem"
-                             onclick="if (!checkForChangedData()) {return false;}">
-                    <f:param value="#{partnerBackingBean.data.currentEntityId}"/>
-                    <h:outputText value="Projekte"/>
-                </pretty:link>
-            </f:subview>
+            <h:outputText value="Projekte" styleClass="menuitemSelected"/>
         </b:cell>
 
     </b:gridBagLayout>
